--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,7 @@
   <modules>
   	<module>chaoter04</module>
   	<module>chapter04</module>
+  	<module>practice05</module>
+  	<module>designpattern-practice</module>
   </modules>
 </project>
