--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,6 @@
   	<module>chapter04</module>
   	<module>practice05</module>
   	<module>designpattern-practice</module>
+  	<module>network</module>
   </modules>
 </project>
